maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:12: error: ';' expected but 'else' found.
    else{
    ^