maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  
  while (estSurBiscuit == false){
    if (estFaceMur == false)
      avance()
      gauche()
      while(estFaceMur == false){
        avance()
        gauche()
      }
    else{
      droite()
    }
  }
  prendBiscuit()
}